<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackgroundBorderless"

    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        >

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless">
            <ImageView
                android:src="@drawable/placeholder"
                android:id="@+id/episodeimageid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                />
            <LinearLayout
                android:id="@+id/linearid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true">
                <TextView
                    android:id="@+id/episodetitleid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="16sp"
                    android:textAlignment="viewEnd"
                    android:textStyle="bold"
                    android:textColor="#ffff"/>
                <TextView
                    android:id="@+id/episode_length_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    />
            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"

            >

            <Button
                android:id="@+id/btn_480p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/_480p"
                android:layout_alignParentStart="true"
                android:textColor="#ffff"
                android:textSize="12sp"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:foreground="@drawable/profile_image_stroke"
                android:textAlignment="center"

                />

            <Button
                android:id="@+id/btn_720p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_720p"
                android:textSize="12sp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#ffff"
                android:background="@color/colorPrimary"
                android:foreground="@drawable/profile_image_stroke"
                android:textAlignment="center"

                />
            <Button
                android:id="@+id/btn_1080p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1080p"
                android:textSize="12sp"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textColor="#ffff"
                android:background="@color/colorPrimary"
                android:foreground="@drawable/profile_image_stroke"
                android:textAlignment="center"

                />



        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>



</android.support.v7.widget.CardView>